# Automated_Literature_Review_Generation_Platform

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-26-literature-review-platform.md
src/agents/: categorization.py  comparison.py  extraction.py  paper_discovery.py  quality.py  query_expansion.py  reference.py  synthesis.py
src/api/: main.py
src/config/: settings.py
src/frontend/: app.py
src/literature_review_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: schemas.py  state.py
src/orchestrator/: workflow.py
src/services/: academic_apis.py  graph_store.py  latex_export.py  llm_client.py  logging_setup.py  vector_store.py
tests/: conftest.py  test_integration.py
tests/test_agents/: test_categorization.py  test_comparison.py  test_extraction.py  test_paper_discovery.py  test_quality.py  test_query_expansion.py  test_reference.py  test_synthesis.py
tests/test_api/: test_api.py
tests/test_models/: test_schemas.py
tests/test_orchestrator/: test_workflow.py
tests/test_services/: test_academic_apis.py  test_graph_store.py  test_llm_client.py  test_vector_store.py
